--- a/map-full.html
+++ b/map-full.html
@@ -17,3 +17,4 @@ permalink: /map-full/
 <div id="drawing" style="width:100%;height:95%"></div>
 <center><a href="/map/">Return</a></center>
 <script src='/assets/scripts/generate-map.js'></script>
+<script>var startId = -1; var endId = -1;</script>
