--- a/map.html
+++ b/map.html
@@ -17,3 +17,4 @@ permalink: /map/
 <div id="drawing" style="height:720"></div>
 <center><a href="/map-full/">Fullscreen (for better functionality)</a></center>
 <script src='/assets/scripts/generate-map.js'></script>
+<script>var startId = -1; var endId = -1;</script>
