--- a/task.html
+++ b/task.html
@@ -72,7 +72,7 @@ function getElem(e) {
 }
 function wikiList(a) {
 	if (a.length < 1) return "None";
-	var url = "http://oldschool.runescape.wiki/w/"
+	var url = "http://oldschool.runescape.wiki/w/";
 	var result = "";
 	for (var i = 0; i < a.length; i++) {
 		var item = a[i];
