--- a/map-full.html
+++ b/map-full.html
@@ -4,9 +4,8 @@ layout: none
 permalink: /map-full/
 ---
 
-<script src='https://cdn.rawgit.com/anvaka/panzoom/v6.1.3/dist/panzoom.min.js'></script>
+<script src='/assets/scripts/panzoom.js'></script>
 <script src='https://cdn.rawgit.com/svgdotjs/svg.js/master/dist/svg.min.js'></script>
-<script src='https://cdn.rawgit.com/timmywil/jquery.panzoom/master/dist/jquery.panzoom.min.js'></script>
 <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
 <style>
 	body {font-family: sans-serif;}
