--- a/map.html
+++ b/map.html
@@ -4,9 +4,8 @@ layout: public
 permalink: /map/
 ---
 
-<script src='https://cdn.rawgit.com/anvaka/panzoom/v6.1.3/dist/panzoom.min.js'></script>
+<script src='/assets/scripts/panzoom.js'></script>
 <script src='https://cdn.rawgit.com/svgdotjs/svg.js/master/dist/svg.min.js'></script>
-<script src='https://cdn.rawgit.com/timmywil/jquery.panzoom/master/dist/jquery.panzoom.min.js'></script>
 <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
 <style>
 	svg text {display: none;}
@@ -15,6 +14,6 @@ permalink: /map/
 
 <h2>Interactive Task Map</h2>
 <div id="drawing" style="height:720"></div>
-<center><a href="/map-full/">Fullscreen (for better functionality)</a></center>
+<center><a href="/map-full/">Fullscreen</a></center>
 <script src='/assets/scripts/generate-map.js'></script>
 <script>var startId = -1; var endId = -1;</script>
