--- a/task.html
+++ b/task.html
@@ -5,7 +5,7 @@ permalink: /task/
 ---
 
 <script src='/assets/scripts/url-query.js'></script>
-<script src='https://cdn.rawgit.com/anvaka/panzoom/v6.1.3/dist/panzoom.min.js'></script>
+<script src='/assets/scripts/panzoom.js'></script>
 <script src='https://cdn.rawgit.com/svgdotjs/svg.js/master/dist/svg.min.js'></script>
 <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
 <style>
